--- a/instagram-oauth-system/public/index.html
+++ b/instagram-oauth-system/public/index.html
@@ -249,6 +249,8 @@
 
     <script>
         const BACKEND_URL = 'https://instagram-oauth-multione-production.up.railway.app';
+        // Novo token atualizado
+        const NEW_TOKEN = 'EAAPHxlZBqFZAQBPPYeJ1czeKl2RFZAF0nbPZAN1pbRQjW03CDtdGkhHoldbpcMvSAEcdeN44Fmu1N7EZB7ZANxicuZCxR0wSwuSyaOAgiRh3jTZCVd5f6jjxDRJbbXuqB9MhRxZAMXMMsxuFZBdZAII2Fkho33Tb5wJ4InIbg7roqb978HpgR5n0Ppq0KfS2t2xcA9bYsKEr2MawPMg64LCwV1fFOE8ZBXHOEPEKPZBTHCxSLvW8BwAMoPJHebgZDZD';
         let monitoring = false;
         let monitorInterval = null;
         let lastLogCount = 0;
